# axum-sample

./: Cargo.toml
src/: errors.rs  main.rs
src/controllers/: authorization.rs  fallback.rs  hello_world.rs  mod.rs
tests/: quick_dev.rs
