[package]
name = "axum-sample"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = {version = "1.3.2", features = ["full"]}
axum = "0.6.20"
serde = { version = "1.0.118", features = ["derive"]}
serde_json = "1.0.107"
tower-http = { version = "0.4", features = ["fs"] }
thiserror = "1.0.48"
surrealdb = "1.0.0"

[dev-dependencies]
anyhow = "1"
httpc-test = "0.1.1"
